wip: towards vibrancy, MTLLayer might be the issue